# symbolicai

./: .gitbook.yaml  .gitignore  .readthedocs.yml  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  DraftSymaiDemo.ipynb  INSTALLATION.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  RELEASE.md  app.py  build.py  conf.py  docker-compose.yml  environment.yml  icon_converter.py  index.rst  installer.py  modules.rst  pyproject.toml  pytest.ini  ruff.toml  setup.py  trade_signals.py  trusted_repos.yml
.github/: FUNDING.yml
.symai/: symsh.config.json
assets/images/: banner
botdyn/: __init__.py  bd.config.json  components.py  core.py  functional.py  post_processors.py  pre_processors.py  prompts.py  symbol.py  utils.py
botdyn/backend/: engine_clip.py  engine_embedding.py  engine_file.py  engine_google.py  engine_gpt3.py  engine_imagerendering.py  engine_ocr.py  engine_output.py  engine_python.py  engine_speech.py  engine_userinput.py  settings.py
botdyn/backend/driver/: webclient.py
docs/: .readthedocs.yml  INSTALLATION.md  INTRODUCTION.md  Makefile  conf.py  config.py  index.md  index.rst  requirements.txt
docs/.doctrees/examples/: abstract.doctree  demo.doctree  docs.doctree  exp_graph_coherence.doctree  news.doctree  paper.doctree  sql.doctree
docs/.doctrees/notebooks/: Basics.doctree  ChatBot.doctree  News.doctree  Queries.doctree  SymPy.doctree
docs/.doctrees/symai/: __init__.doctree  (+16 more)
docs/backend/: index.rst
docs/modules/: Chat.rst  Components.rst  Core.rst  Functional.rst  Memory.rst  Post_Processors.rst  Pre_Processors.rst  Prompts.rst  Symbol.rst
docs/source/: API_REF.rst  CONTRIBUTING.md  INSTALLATION.md  INTRODUCTION.md  LICENSE  QUICKSTART.md  README.md  SUMMARY.md  conf.py  index.rst  symai.backend.engines.rst  symai.backend.mixin.rst  symai.collect.rst  symai.extended.interfaces.rst  symai.extended.personas.rst  symai.extended.rst  symai.formatter.rst  symai.misc.rst  symai.ops.rst  symai.rst  symai.server.rst
examples/: a_star.txt  abstract.py  contracts.ipynb  dbpedia_samples.jsonl  dbpedia_samples_prepared_valid.jsonl  demo.py  demo_strategy.py  docs.py  dql.py  einsteins_puzzle.txt  exp_graph_coherence.py  file.json  formal_verification.ipynb  news.py  paper.py  primitives.ipynb  qdrant_rag_demo.ipynb  sql.py  symbia.py
examples/results/: news.html
legacy/notebooks/: Basics.ipynb  ChatBot.ipynb  Conversation.ipynb  Indexer.ipynb  News.ipynb  Queries.ipynb  TTS_Persona.ipynb
legacy/old/: test_backend.py  test_components.py  test_composition.py  test_decorators.py  test_strategy.py
notebooks/: Basics.ipynb  ChatBot.ipynb  Conversation.ipynb  Demo.ipynb  Indexer.ipynb  News.ipynb  Queries.ipynb  SymPy.ipynb  TTS_Persona.ipynb  demo.ipynb
notebooks/examples/: dbpedia_samples_prepared_train.jsonl  demo.py  lean.py  news.py  paper.py
symai/: TERMS_OF_SERVICE.md  __init__.py  bin.py  chat.py  components.py  constraints.py  context.py  core.py  core_ext.py  decorator.py  exceptions.py  few_shots.py  formatter.py  functional.py  imports.py  interfaces.py  memory.py  nesy_client.py  nesy_server.py  post_processors.py  pre_processors.py  processor.py  prompts.py  shell.py  shellsv.py  strategy.py  symai.config.json  symbol.py  symsh.md  utils.py
symai/backend/: async_bridge.py  base.py  engine_bard_wrapper.py  engine_blip2.py  engine_clip.py  engine_crawler.py  engine_embedding.py  engine_file.py  engine_google.py  engine_gpt3.py  engine_gptX_chat.py  engine_gptX_completion.py  engine_gptfinetuner.py  engine_imagerendering.py  engine_index.py  engine_llamacpp_completion.py  engine_nesy_client.py  engine_ocr.py  engine_output.py  engine_pinecone.py  engine_python.py  engine_selenium.py  engine_serpapi.py  engine_speech.py  engine_speech_to_text.py  engine_text_to_speech.py  engine_userinput.py  engine_wolframalpha.py  settings.py
symai/collect/: __init__.py  dynamic.py  pipeline.py  stats.py
symai/endpoints/: api.py  components_api.py  symbol_api.py
symai/extended/: __init__.py  api_builder.py  arxiv_pdf_parser.py  bibtex_parser.py  conversation.py  crawler.py  document.py  file_merger.py  graph.py  html_style_template.py  os_command.py  repo_cloner.py  seo_query_optimizer.py  solver.py  summarizer.py  taypan_interpreter.py  vectordb.py
symai/format/: __init__.py
symai/formatter/: __init__.py  emoji.pytxt  formatter.py  regex.py  regex_formatter.py
symai/menu/: screen.py
symai/misc/: console.py  loader.py
symai/models/: __init__.py  base.py  errors.py
symai/ops/: __init__.py  elements.py  measures.py  primitives.py  symbol_primitives.py
symai/server/: huggingface_server.py  lean4_fastapi.py  lean4_server.py  llama_cpp_server.py  qdrant_rag_api.py  qdrant_server.py  vllm_server.py
tests/: README.md  components.py  test_apply_preprocessors.py  test_backend.py  test_components.py  test_composition.py  test_decorators.py  test_engine_repository.py  test_execute_query_fallback.py  test_finetuning.py  test_hf_backend_composition.py  test_import.py  test_imports.py  test_interface.py  test_interfaces.py  test_limit_num_outputs.py  test_misc.py  test_nesy_engine.py  test_openai_nesy_engine.py  test_optional_dependencies.py  test_package_install.py  test_postprocess.py  test_primitives.py  test_sim_dist.py  test_strategy.py  test_symbol.py  test_typecasting.py
tests/backend/: test_async_bridge.py
tests/contract/: test_contract.py  test_llmdatamodel_advanced.py  test_llmdatamodel_basic.py  test_llmdatamodel_comprehensive.py  test_llmdatamodel_integration.py  test_llmdatamodel_negative_paths.py  test_union_various.py
tests/data/: sample.epub  sample.html  sample.ipynb  sample.pptx  sample.txt
tests/functional/: test_apply_postprocess.py  test_apply_preprocessors.py  test_components.py  test_execute_query_fallback.py  test_limit_num_outputs.py  test_typecasting.py
tests/invariants/: test_extras_pyproject_sync.py
tests/old/: test_composition.py  test_decorators.py  test_import.py  test_interface.py
tests/scripts/: download_models.py  evaluation.py  single_run.py
tests/server/: test_qdrant_rag_api.py
(+519 files in other folders)
